apps/media/flaresolverr/deployment.yaml
#
# Reference:
# https://github.com/FlareSolverr/FlareSolverr
#

apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: flaresolverr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: flaresolverr
  type: ClusterIP
  ports:
    - name: http
      port: 8191
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 8192
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: flaresolverr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: flaresolverr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: flaresolverr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.2 # {"$imagepolicy": "media:flaresolverr"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8191
              protocol: TCP
            - name: metrics
              containerPort: 8192
              protocol: TCP
